2010-07-10 arne

	* fix invisible state inconsistency of CViewContainer children
	* send key events only to mouse enabled views
	* move CGraphicsPath creation into CDrawContext
	* move CGraphicsPath draw methods into CDrawContext

2010-06-30 arne

	* added ViewIterator and ReverseViewIterator classes, so that iterating over CViewContainer children are not that expensive
	* fix modal view handling
	* fix font creation bug with GDI+ when combining multiple font styles

2010-06-25 arne

	* Mac 64 bit AEffGUIEditor implementation
	* Build 32/64 bit universal binary for tutorial project
	* fix focus issues with Cocoa and text edit fields
	* fix bugs in CVUMeter

2010-06-08 arne

	* added CFontChooser class
	* added GenericStringListDataBrowserSource class
	* changed key event flow in CFrame. New event flow is :
			- IKeyboardHook
			- focus view
			- parents of focus view (new)
			- modal view
		CViewContainer now does not propagate key events to child views
	* fixing bug 2992884 : CDrawContext::drawString does not work on Mac OSX < 10.5
	* fixing bug 2994963 : Mac Carbon option menu - wrong item checked
	* fixing setMin(..) and setMax(..) for CKnob
	* consistent names for uidescription files and classes

2010-04-28 arne

	* changed to use C99 variable types (int8_t, uint8_t, etc)
	* added CButtonState class which replaces the buttons parameter in CView mouse methods
	* Auto drag scrolling flag for CScrollView
	* removed CGraphicsPath::addString method
	* added some new draw styles to CKnob :
		- drawing a circle instead of lines for the handle
		- drawing the value as a corona (with support for inverted value and value from center)
	* added drawing style to CSlider
	* simplified stringToValue and valueToString functions for CParamDisplay and CTextEdit

2010-04-09 arne

	* Direct2D menu icon implementation
	* fix memory leak in Windows when using icons in menus
	
2010-04-07 arne

	* removed COffscreenContext in CViewContainer & CVUMeter as it is not needed there anymore