@@ -1,3 +1,8 @@
+2010-08-04 arne
+
+	* quartz: draw bitmaps on pixel boundaries
+	* combine D2DBitmap and D2DOffscreenBitmap
+
 2010-07-10 arne
 
 	* fix invisible state inconsistency of CViewContainer children
